Fix title overflow

--- a/src/styles/post_header.css
+++ b/src/styles/post_header.css
@@ -5,7 +5,7 @@
     padding: 10px;
     border-radius: 3px;
     font-family: Montserrat, Arial, Helvetica, sans-serif;
-
+    background-color: white;
     transition: 0.5s;
 }
 
