--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -17,7 +17,7 @@ html, body, #root{
    height: 100px;
    line-height: 100px;
    margin: 0 auto;
-   width: 25%;
+   width: 100%;
    text-align: center;
    font-size: 100px;
    font-family: Montserrat, Arial, Helvetica, sans-serif;
